Reduced the numbers of issue found by FindBugs: 'just' 71 are remaining...